--- a/package.json
+++ b/package.json
@@ -1,17 +1,11 @@
 {
-  "name": "kevala",
+  "name": "bug",
   "license": "UNLICENSED",
-  "engines": {
-    "node": "14.15",
-    "yarn": "1.22"
-  },
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
     "test": "web-test-runner",
-    "test:watch": "web-test-runner --watch",
-    "cover": "web-test-runner --coverage",
-    "cover:html": "web-test-runner --coverage && ws -p ${PORT:-3030} -d coverage/lcov-report --spa index.html"
+    "cover": "web-test-runner --coverage && ws -p 3030 -d coverage/lcov-report --spa index.html"
   },
   "devDependencies": {
     "@snowpack/web-test-runner-plugin": "^0.1.5",
